Added Services Auto-renewal registration in .yaml file.

--- a/src/main/resources/application.yaml
+++ b/src/main/resources/application.yaml
@@ -5,6 +5,8 @@ server:
   port: 8070
 eureka:
   instance:
+    lease-renewal-interval-in-seconds: 5
+    lease-expiration-duration-in-seconds: 10
     hostname: localhost
   client:
     register-with-eureka: false
